tests/error/already_parent.gw
// [contains] has already been defined in parent class
 class C            { int i; }
class CC extends C { int i; }
